--- a/res/values-night/themes.xml
+++ b/res/values-night/themes.xml
@@ -98,16 +98,24 @@
         <item name="cornerRadius">24dp</item>
     </style>
 
-    <style name="Widget.Hub.ProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
-        <item name="colorControlActivated">@color/theme_accent_dark</item>
-    </style>
-
     <style name="Hub.TextAppearance.LabelLarge" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
         <item name="android:letterSpacing">0.00714286</item>
+    </style>
+
+    <style name="Widget.Hub.ProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="colorControlActivated">@color/theme_accent_dark</item>
+    </style>
+
+    <style name="Widget.Hub.ProgressBar.Circular" parent="@android:style/Widget.Material.ProgressBar.Large">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:indeterminate">true</item>
+        <item name="android:indeterminateDrawable">@drawable/circle_progress_indicator_m3_animator</item>
+        <item name="android:indeterminateTint">@null</item>
+        <item name="android:indeterminateTintMode">@null</item>
     </style>
 
 </resources>
